wp-content/themes/gca-intranet-foundation/assets/scss/_breadcrumbs.scss
.govuk-breadcrumbs__list {
    margin: 0 auto;
}
.gca-breadcrumbs {
    padding: 10px 0;
    background-color: $gca-cream;
    width: 100%;
}

.govuk-breadcrumbs__link {

    &:hover,
    &:focus,
    &:active {
        text-decoration: none;
    }
}

.govuk-breadcrumbs__current {
    text-decoration: none;
}

.govuk-breadcrumbs__list-item:before {

    bottom: auto;
    height: 0.3em;
    margin: 0;

    top: calc(50% + 2px);
    transform: translateY(-50%) rotate(45deg);
    width: 0.3em;
}

